# cert-sentinel

./: .gitignore  PLAN.md  README.md  pyproject.toml
cert_sentinel/: __init__.py  cli.py  evaluate.py  fetch.py  inspect.py
tests/: test_cli.py  test_evaluate.py  test_fetch.py  test_inspect.py
