[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-sentinel"
version = "0.1.0"
description = "Scan TLS certificates and surface expiry/health risks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
cert-sentinel = "cert_sentinel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
